--- a/DX11UWA/DX11UWA/DX11UWA.vcxproj.filters
+++ b/DX11UWA/DX11UWA/DX11UWA.vcxproj.filters
@@ -119,7 +119,7 @@
     <Image Include="Assets\StoreLogo.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Assets\cobblestoneNormal.dds">
+    <Image Include="Assets\PirateNormal.dds">
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
@@ -153,5 +153,6 @@
     <Media Include="Assets\woodfloor_seamless_bw.dds" />
     <Media Include="Assets\grassTexture.dds" />
     <Media Include="Assets\cobblestoneTexture.dds" />
+    <Media Include="Assets\cobblestoneNormal.dds" />
   </ItemGroup>
 </Project>
